deployments/gateway/templates/api-policy-deny-default.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "auth-policy-deny-default"
spec:
  selector:
    matchLabels:
      tic.security: jwt-authentication
  action: DENY
  rules: []
